# restaurant-invoice-automation-

./: .env.example  README.md  output.json  pyproject.toml  requirements.txt
app/: config.py  drive_ingest.py  extraction.py  food_models.py  food_pipeline.py  food_prompt.py  llm_extract.py  main.py  main_financial.py  main_food.py  normalize.py  pdf_utils.py  sheets_store.py  state.py
